--- a/components/ColorPicker/style/token.less
+++ b/components/ColorPicker/style/token.less
@@ -12,7 +12,7 @@
 @color-preview-size-large: 26px;
 
 @color-input-bg-color: var(~'@{arco-cssvars-prefix}-color-fill-2');
-@color-value-margin-left: @spacing-2;
+@color-value-margin-left: @spacing-3;
 @color-value-font-color: var(~'@{arco-cssvars-prefix}-color-text-1');
 @color-value-font-color_disabled: var(~'@{arco-cssvars-prefix}-color-text-4');
 
